# samples

./: README.md
c/: README.md
c/arm_neon_intrinsic/: README.md
c/comp_decomp/: Doxyfile  Makefile  README.md  common.c  common.h  huffman.c  huffman.h  main.c  run_decode.sh  run_encode.sh  runlength.c  runlength.h
c/dnn/: Doxyfile  Makefile  README.md  common.h  data_loader.c  data_loader.h  docker_run.sh  main.c  run.sh
c/dnn/tflite/inference_sample/: CMakeLists.txt
c/measuring_proc_time/: Doxyfile  Makefile  README.md  common.h  main.c  measuring_proc_time.h
c/search/: Doxyfile  Makefile  README.md  main.c  quick_sort.c  quick_sort.h  search.c  search.h
c/sort/: Doxyfile  Makefile  README.md  main.c  sort.c  sort.h
c/template/: Makefile  README.md  main.c  template.c  template.h  template_common.h
cpp/: README.md
cpp/opencv/: README.md
cpp/opencv/01_camera_input/: CMakeLists.txt  README.md  camera_input.cpp
env/: README.md
env/docker_compose_ubuntu/: README.md  docker-compose.yaml
env/docker_compose_ubuntu_python/: README.md
env/docker_ubuntu/: build-image.sh  enter-docker.sh
env/plantuml/: README.md  er_diagram.pu
env/shell_script/: README.md  template.sh
gen_ai_app/ai_chat/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
gen_ai_app/website_summarizer/: README.md  docker-compose.yml
python/: README.md
python/argparse_sample/: README.md  argparse_sample.py
python/argument_test/: README.md  argument_test.ipynb
python/automated_machine_learning/: README.md  check_devices.ipynb  description.ipynb
(+514 files in other folders)
